baml_language/crates/baml_tests/src/compiler2_tir/snapshots/baml_tests__compiler2_tir__stream_expansion__class_field_gets_stream_prefix.snap
---
source: crates/baml_tests/src/compiler2_tir/stream_expansion.rs
expression: "render_tir(&db, file)"
---
class user.Inner {
  value: string
}
class user.Outer {
  inner: user.Inner
}
class user.Inner$stream {
  value: null | string
}
class user.Outer$stream {
  inner: null | user.Inner$stream
}
