baml_language/crates/baml_tests/src/compiler2_tir/snapshots/baml_tests__compiler2_tir__stream_expansion__field_alias_preserved_on_stream_class.snap
---
source: crates/baml_tests/src/compiler2_tir/stream_expansion.rs
expression: "render_tir(&db, file)"
---
class user.WithAlias {
  bar: string @alias("baz")
  count: int @alias("cnt")
}
class user.WithAlias$stream {
  bar: null | string @alias("baz")
  count: null | int @alias("cnt")
}
