baml_language/crates/baml_tests/src/compiler2_tir/snapshots/baml_tests__compiler2_tir__stream_expansion__field_description_preserved_stream_done_stripped.snap
---
source: crates/baml_tests/src/compiler2_tir/stream_expansion.rs
expression: "render_tir(&db, file)"
---
class user.WithDesc {
  name: string @description("The name")
  age: int @description("Age in years")
}
function user.WithDesc.to_json(self: user.WithDesc) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  baml.json.parse(baml.json.to_string<WithDesc>(self)) : baml.json.json
}
function user.WithDesc.from_json(j: baml.json.json) -> user.WithDesc throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  baml.json.from_string<T>(baml.json.stringify(j)) : user.WithDesc
}
class user.WithDesc$stream {
  name: string @description("The name")
  age: null | int @description("Age in years")
}
