baml_language/crates/baml_tests/src/compiler2_tir/snapshots/baml_tests__compiler2_tir__stream_expansion__map_field_recurses_value.snap
---
source: crates/baml_tests/src/compiler2_tir/stream_expansion.rs
expression: "render_tir(&db, file)"
---
class user.Inner {
  value: string
}
class user.WithMaps {
  simple: map<string, int>
  complex: map<string, user.Inner>
}
class user.Inner$stream {
  value: null | string
}
class user.WithMaps$stream {
  simple: map<string, int>
  complex: map<string, user.Inner$stream>
}
